src/statics/_qore/v1/assets/_content/_downquark/_internals/todos.md
«««
METADATA: nested page metadata
Title: Todo Internal
Author: @mlnck
created: 1694997815134
edited: 1694997815134
»»»

<details><summary>todos</summary>
### complete:
#### for launch

1. statically create <input type="checkbox" checked="checked" disabled /> blog 
  - forum links (phase 2)
1. <input type="checkbox" checked="checked" disabled /> make tiles work
1. make filter work
1. add 1st level of animation
1. complete landing page content creation
  - refactor content to multiple pages
1. <input type="checkbox" checked="checked" disabled /> make routing - decide between
  1. <input type="checkbox" checked="checked" disabled />hash url &amp; target
    - quickest &amp; cleanest
    - no seo or other "goodnesses"
    - phase 1?
  1. ~~compiling new pages~~
  1. ~~symlinking pages~~
  1. rewrite url
    - the most desirable
    - should not be too difficult after implementation of the above
    - phase 2?

#### after launch

1. convert blog and forum links to become dynamic
1. create dynamic internal pages as well (automatic link creation for `.md` files)
</details>