src/statics/_qore/v2/assets/_content/_downquark/_internals/todos.md
«««
METADATA: nested page metadata
Title: Todo Internal
Author: @mlnck
created: 1694997815134
edited: 1694997815134
»»»

<details><summary>todos</summary>
### complete:

#### for `alpha launch`
1. blogs post should be queried
1. [gh-readme](https://dev.to/jacktt/creating-dynamic-readmemd-file-388o) should be dynamic
1. page content

##### _nice-to-haves_
1. real url rewrites
1. integrated forum posts
1. filter nuances
1. timeline tiles fade in as offset to top
  - use css "_proc-gen_" for timing, and opacity?

#### for `0.1.0-alpha`
1. statically create <input type="checkbox" checked="checked" disabled /> blog 
1. <input type="checkbox" checked="checked" disabled /> make tiles work
1. <input type="checkbox" checked="checked" disabled />make filter work
1. <input type="checkbox" checked="checked" disabled />add 1st level of animation
1. <input type="checkbox" disabled />complete landing page content creation
  - refactor content to multiple pages
1. <input type="checkbox" checked="checked" disabled /> make routing - decide between
  1. <input type="checkbox" checked="checked" disabled />hash url &amp; target

#### after launch

1. convert blog and forum links to become dynamic
1. create dynamic internal pages as well (automatic link creation for `.md` files)
1. forum links (phase 2)
1. rewrite url
    - the most desirable
    - should not be too difficult after implementation of the above
</details>